# cd15156-llm-ops-exercises

ab-testing/ab-testing-starter/: INSTRUCTIONS.md
ab-testing/solution/: CONSTANTS.md  DEMO.md  Makefile  SOLUTION_NOTES.md
cost-monitoring/cost-monitoring-starter/: INSTRUCTIONS.md
cost-monitoring/solution/: SOLUTION_NOTES.md
evaluation-ragas/evaluation-ragas-starter/: CONSTANTS.md  INSTRUCTIONS.md  Makefile
evaluation-ragas/solution/: .env.example  INSTRUCTIONS.md  INTERFACES.md  OVERVIEW.md  SOLUTION_NOTES.md
gateway-fastapi/gateway-fastapi-starter/: INSTRUCTIONS.md  pyproject.toml
gateway-fastapi/solution/: INSTRUCTIONS.md  SOLUTION_NOTES.md  pyproject.toml
gateway-fastapi/solution/prompts/: classifier.j2
gateway-fastapi/solution/scripts/: ab_analyze.py
gateway-fastapi/solution/src/: config.py  generator.py  pipeline.py  pricing.py
gateway-fastapi/solution/src/gateway/: __init__.py  app.py  classifier.py  router.py  routes.py
gateway-fastapi/solution/src/gateway/providers/: __init__.py  anthropic.py
gateway-fastapi/solution/src/guardrails/llm_judge/: output_guards.py
gateway-fastapi/solution/tests/: test_retry.py  test_smoke.py
guardrails-impl/guardrails-impl-starter/: CONSTANTS.md  INSTRUCTIONS.md
guardrails-impl/solution/: DEMO.md  INSTRUCTIONS.md  OVERVIEW.md  SOLUTION_NOTES.md
latency-optimization/latency-optimization-starter/: INSTRUCTIONS.md  pyproject.toml
latency-optimization/solution/: DEMO.md  INTERFACES.md  SOLUTION_NOTES.md  pyproject.toml
module-03-prompt-versioning/prompt-versioning-starter/: DEMO.md  INSTRUCTIONS.md  Makefile  README.md  pyproject.toml
module-03-prompt-versioning/solution/: .env.example  DEMO.md  INSTRUCTIONS.md  OVERVIEW.md  SOLUTION_NOTES.md  demo-video-script.md  solution-video-script.md
module-05-vector-databases/solution/: DEMO.md  OVERVIEW.md  SOLUTION_NOTES.md
module-05-vector-databases/vector-databases-starter/: DEMO.md  INSTRUCTIONS.md  pyproject.toml
module-07-rag-pipeline/rag-pipeline-starter/: INSTRUCTIONS.md
module-07-rag-pipeline/solution/: INSTRUCTIONS.md  OVERVIEW.md
module-09-observability-tracing/observability-tracing-starter/: INSTRUCTIONS.md
module-09-observability-tracing/solution/: CONSTANTS.md  DEMO.md  INSTRUCTIONS.md  OVERVIEW.md  SOLUTION_NOTES.md
module-11-evaluation-ragas/evaluation-ragas-starter/: .env.example  DEMO.md  INSTRUCTIONS.md
module-11-evaluation-ragas/solution/: DEMO.md  INSTRUCTIONS.md  OVERVIEW.md  SOLUTION_NOTES.md
module-13-cost-monitoring/cost-monitoring-starter/: DEMO.md
module-13-cost-monitoring/solution/: DEMO.md  INSTRUCTIONS.md  OVERVIEW.md
module-15-semantic-caching/semantic-caching-starter/: DEMO.md  INSTRUCTIONS.md
module-15-semantic-caching/solution/: .env.example  .gitignore  INSTRUCTIONS.md  OVERVIEW.md  SOLUTION_NOTES.md
module-18-gateway-fastapi/gateway-fastapi-starter/: DEMO.md  INSTRUCTIONS.md  pyproject.toml
module-18-gateway-fastapi/solution/: DEMO.md  INSTRUCTIONS.md  INTERFACES.md  OVERVIEW.md  SOLUTION_NOTES.md  pyproject.toml
module-20-guardrails-impl/guardrails-impl-starter/: DEMO.md  INSTRUCTIONS.md  INTERFACES.md
module-20-guardrails-impl/solution/: INSTRUCTIONS.md  INTERFACES.md  OVERVIEW.md  SOLUTION_NOTES.md
module-22-ab-testing/ab-testing-starter/: DEMO.md  Makefile
module-22-ab-testing/solution/: DEMO.md  INSTRUCTIONS.md  OVERVIEW.md  SOLUTION_NOTES.md
module-24-ragops-pipeline/solution/: INSTRUCTIONS.md  OVERVIEW.md  SOLUTION_NOTES.md
module-26-latency-optimization/latency-optimization-starter/: DEMO.md  INSTRUCTIONS.md  pyproject.toml
module-26-latency-optimization/solution/: .env.example  DEMO.md  INSTRUCTIONS.md  OVERVIEW.md  SOLUTION_NOTES.md  pyproject.toml
module-26-latency-optimization/solution/scripts/: ef_search_sweep.py
module-26-latency-optimization/solution/src/ingestion/: watcher.py
observability-tracing/observability-tracing-starter/: DEMO.md  README.md
observability-tracing/solution/: INSTRUCTIONS.md  OVERVIEW.md  SOLUTION_NOTES.md  pyproject.toml
prompt-versioning/prompt-versioning-starter/: INSTRUCTIONS.md  INTERFACES.md  pyproject.toml
prompt-versioning/solution/: INSTRUCTIONS.md  SOLUTION_NOTES.md  pyproject.toml
rag-pipeline/rag-pipeline-starter/: DEMO.md  INSTRUCTIONS.md
rag-pipeline/solution/: DEMO.md  INSTRUCTIONS.md  SOLUTION_NOTES.md
ragops-pipeline/ragops-pipeline-starter/: DEMO.md  INSTRUCTIONS.md  INTERFACES.md  Makefile  README.md
ragops-pipeline/solution/: DEMO.md  INSTRUCTIONS.md  SOLUTION_NOTES.md
semantic-caching/semantic-caching-starter/: CONSTANTS.md  INSTRUCTIONS.md  Makefile
semantic-caching/solution/: DEMO.md  INSTRUCTIONS.md  SOLUTION_NOTES.md
(+317 files in other folders)
